Bug 181146 - Source album {MY ALBUM NAME} not found in database
Summary: Source album {MY ALBUM NAME} not found in database
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Albums (other bugs)
Version First Reported In: 0.10.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-18 09:27 UTC by Valery Novikov
Modified: 2017-07-19 13:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valery Novikov 2009-01-18 09:27:35 UTC
Version:           0.10.0-beta8 (using Devel)
Compiler:          i686-pc-linux-gnu-4.1.2 
OS:                Linux
Installed from:    Compiled sources

Just try to move one album into another (using drag&drop).

Actual Result - after pressing "Move" button in popup menu - nothing happens. If you will retry - error dialog appears with following message:

Source album {MY ALBUM NAME} not found in database.
Were "{MY ALBUM NAME}" just name of album you try to move.

Expected result - album should be moved succesfully after first try.

Additional comment:
I suppose that digikam really moves album on disk after first try, but albums tree is not correctly updated.
Comment 1 caulier.gilles 2009-01-18 09:42:15 UTC
Can you try with current code from svn (rc1) where some fixes in this way have been done.

Gilles Caulier
Comment 2 Valery Novikov 2009-01-18 10:43:25 UTC
(In reply to comment #1)
> Can you try with current code from svn (rc1) where some fixes in this way have
> been done.
> 
> Gilles Caulier
> 

Thank you for quick reply!

Sorry, but currently i can't try fix from svn. I'll waiting for rc1 release (it should happens today as i know).
Comment 3 Marcel Wiesweg 2009-01-18 16:51:11 UTC
SVN commit 912984 by mwiesweg:

The method handling AlbumChangeset::Renamed was not aware that Renamed
can also mean that the album has been moved to a different parent.
In this case, remove the old album and call scanPAlbums.

BUG: 181146

 M  +19 -4     albummanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912984