The method handling AlbumChangeset::Renamed was not aware that Renamed can also mean that the album has been moved to a different parent. In this case, remove the old album and call scanPAlbums.

BUG: 181146

svn path=/trunk/extragear/graphics/digikam/; revision=912984